--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -25,7 +25,15 @@
       "cell_type": "code",
       "execution_count": 12,
       "id": "a3901429",
-      "metadata": {},
+      "metadata": {
+        "noteable": {
+          "output_collection_id": "5438206c-ee6d-42af-baff-7d89f7f3d37e"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T19:58:39.385253+00:00",
+          "start_time": "2023-07-18T19:58:39.228359+00:00"
+        }
+      },
       "outputs": [],
       "source": [
         "directory = ('../Project_1')\n",
@@ -37,197 +45,16 @@
       "cell_type": "code",
       "execution_count": 16,
       "id": "25843b51",
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>index</th>\n",
-              "      <th>Job Title</th>\n",
-              "      <th>Salary Estimate</th>\n",
-              "      <th>Job Description</th>\n",
-              "      <th>Rating</th>\n",
-              "      <th>Company Name</th>\n",
-              "      <th>Location</th>\n",
-              "      <th>Headquarters</th>\n",
-              "      <th>Size</th>\n",
-              "      <th>Founded</th>\n",
-              "      <th>Type of ownership</th>\n",
-              "      <th>Industry</th>\n",
-              "      <th>Sector</th>\n",
-              "      <th>Revenue</th>\n",
-              "      <th>Competitors</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>0</td>\n",
-              "      <td>Sr Data Scientist</td>\n",
-              "      <td>$137K-$171K (Glassdoor est.)</td>\n",
-              "      <td>Description\\r\\n\\r\\nThe Senior Data Scientist i...</td>\n",
-              "      <td>3.1</td>\n",
-              "      <td>Healthfirst\\r\\n3.1</td>\n",
-              "      <td>New York, NY</td>\n",
-              "      <td>New York, NY</td>\n",
-              "      <td>1001 to 5000 employees</td>\n",
-              "      <td>1993</td>\n",
-              "      <td>Nonprofit Organization</td>\n",
-              "      <td>Insurance Carriers</td>\n",
-              "      <td>Insurance</td>\n",
-              "      <td>Unknown / Non-Applicable</td>\n",
-              "      <td>EmblemHealth, UnitedHealth Group, Aetna</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1</td>\n",
-              "      <td>Data Scientist</td>\n",
-              "      <td>$137K-$171K (Glassdoor est.)</td>\n",
-              "      <td>Secure our Nation, Ignite your Future\\r\\n\\r\\nJ...</td>\n",
-              "      <td>4.2</td>\n",
-              "      <td>ManTech\\r\\n4.2</td>\n",
-              "      <td>Chantilly, VA</td>\n",
-              "      <td>Herndon, VA</td>\n",
-              "      <td>5001 to 10000 employees</td>\n",
-              "      <td>1968</td>\n",
-              "      <td>Company - Public</td>\n",
-              "      <td>Research &amp; Development</td>\n",
-              "      <td>Business Services</td>\n",
-              "      <td>$1 to $2 billion (USD)</td>\n",
-              "      <td>-1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>2</td>\n",
-              "      <td>Data Scientist</td>\n",
-              "      <td>$137K-$171K (Glassdoor est.)</td>\n",
-              "      <td>Overview\\r\\n\\r\\n\\r\\nAnalysis Group is one of t...</td>\n",
-              "      <td>3.8</td>\n",
-              "      <td>Analysis Group\\r\\n3.8</td>\n",
-              "      <td>Boston, MA</td>\n",
-              "      <td>Boston, MA</td>\n",
-              "      <td>1001 to 5000 employees</td>\n",
-              "      <td>1981</td>\n",
-              "      <td>Private Practice / Firm</td>\n",
-              "      <td>Consulting</td>\n",
-              "      <td>Business Services</td>\n",
-              "      <td>$100 to $500 million (USD)</td>\n",
-              "      <td>-1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>3</td>\n",
-              "      <td>Data Scientist</td>\n",
-              "      <td>$137K-$171K (Glassdoor est.)</td>\n",
-              "      <td>JOB DESCRIPTION:\\r\\n\\r\\nDo you have a passion ...</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>INFICON\\r\\n3.5</td>\n",
-              "      <td>Newton, MA</td>\n",
-              "      <td>Bad Ragaz, Switzerland</td>\n",
-              "      <td>501 to 1000 employees</td>\n",
-              "      <td>2000</td>\n",
-              "      <td>Company - Public</td>\n",
-              "      <td>Electrical &amp; Electronic Manufacturing</td>\n",
-              "      <td>Manufacturing</td>\n",
-              "      <td>$100 to $500 million (USD)</td>\n",
-              "      <td>MKS Instruments, Pfeiffer Vacuum, Agilent Tech...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>4</td>\n",
-              "      <td>Data Scientist</td>\n",
-              "      <td>$137K-$171K (Glassdoor est.)</td>\n",
-              "      <td>Data Scientist\\r\\nAffinity Solutions / Marketi...</td>\n",
-              "      <td>2.9</td>\n",
-              "      <td>Affinity Solutions\\r\\n2.9</td>\n",
-              "      <td>New York, NY</td>\n",
-              "      <td>New York, NY</td>\n",
-              "      <td>51 to 200 employees</td>\n",
-              "      <td>1998</td>\n",
-              "      <td>Company - Private</td>\n",
-              "      <td>Advertising &amp; Marketing</td>\n",
-              "      <td>Business Services</td>\n",
-              "      <td>Unknown / Non-Applicable</td>\n",
-              "      <td>Commerce Signals, Cardlytics, Yodlee</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   index          Job Title               Salary Estimate  \\\n",
-              "0      0  Sr Data Scientist  $137K-$171K (Glassdoor est.)   \n",
-              "1      1     Data Scientist  $137K-$171K (Glassdoor est.)   \n",
-              "2      2     Data Scientist  $137K-$171K (Glassdoor est.)   \n",
-              "3      3     Data Scientist  $137K-$171K (Glassdoor est.)   \n",
-              "4      4     Data Scientist  $137K-$171K (Glassdoor est.)   \n",
-              "\n",
-              "                                     Job Description  Rating  \\\n",
-              "0  Description\\r\\n\\r\\nThe Senior Data Scientist i...     3.1   \n",
-              "1  Secure our Nation, Ignite your Future\\r\\n\\r\\nJ...     4.2   \n",
-              "2  Overview\\r\\n\\r\\n\\r\\nAnalysis Group is one of t...     3.8   \n",
-              "3  JOB DESCRIPTION:\\r\\n\\r\\nDo you have a passion ...     3.5   \n",
-              "4  Data Scientist\\r\\nAffinity Solutions / Marketi...     2.9   \n",
-              "\n",
-              "                Company Name       Location            Headquarters  \\\n",
-              "0         Healthfirst\\r\\n3.1   New York, NY            New York, NY   \n",
-              "1             ManTech\\r\\n4.2  Chantilly, VA             Herndon, VA   \n",
-              "2      Analysis Group\\r\\n3.8     Boston, MA              Boston, MA   \n",
-              "3             INFICON\\r\\n3.5     Newton, MA  Bad Ragaz, Switzerland   \n",
-              "4  Affinity Solutions\\r\\n2.9   New York, NY            New York, NY   \n",
-              "\n",
-              "                      Size  Founded        Type of ownership  \\\n",
-              "0   1001 to 5000 employees     1993   Nonprofit Organization   \n",
-              "1  5001 to 10000 employees     1968         Company - Public   \n",
-              "2   1001 to 5000 employees     1981  Private Practice / Firm   \n",
-              "3    501 to 1000 employees     2000         Company - Public   \n",
-              "4      51 to 200 employees     1998        Company - Private   \n",
-              "\n",
-              "                                Industry             Sector  \\\n",
-              "0                     Insurance Carriers          Insurance   \n",
-              "1                 Research & Development  Business Services   \n",
-              "2                             Consulting  Business Services   \n",
-              "3  Electrical & Electronic Manufacturing      Manufacturing   \n",
-              "4                Advertising & Marketing  Business Services   \n",
-              "\n",
-              "                      Revenue  \\\n",
-              "0    Unknown / Non-Applicable   \n",
-              "1      $1 to $2 billion (USD)   \n",
-              "2  $100 to $500 million (USD)   \n",
-              "3  $100 to $500 million (USD)   \n",
-              "4    Unknown / Non-Applicable   \n",
-              "\n",
-              "                                         Competitors  \n",
-              "0            EmblemHealth, UnitedHealth Group, Aetna  \n",
-              "1                                                 -1  \n",
-              "2                                                 -1  \n",
-              "3  MKS Instruments, Pfeiffer Vacuum, Agilent Tech...  \n",
-              "4               Commerce Signals, Cardlytics, Yodlee  "
-            ]
-          },
-          "execution_count": 16,
-          "metadata": {},
-          "output_type": "execute_result"
+      "metadata": {
+        "noteable": {
+          "output_collection_id": "faf206ca-c24e-46ea-a597-3b598a3425af"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T19:58:43.729134+00:00",
+          "start_time": "2023-07-18T19:58:42.571937+00:00"
         }
-      ],
+      },
+      "outputs": [],
       "source": [
         "unclean_data = pd.read_csv(file_path)\n",
         "unclean_df = pd.DataFrame(unclean_data)\n",
@@ -263,7 +90,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "f7582c14-62fa-4856-b0c1-adc56b12769a"
+      "last_transaction_id": "adb5ce4f-9311-432d-a161-ee99f7e98feb"
     }
   },
   "nbformat": 4,
