Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -86,12 +86,21 @@
       "source": "unclean_data = pd.read_csv('Uncleaned_DS_jobs.csv')\nunclean_df = pd.DataFrame(unclean_data)\nunclean_df.head()"
     },
     {
+      "id": "49a77e08-8f89-41ad-a0f2-3c1258a0a4be",
       "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "4e7a9b48-f33a-4c26-bd0b-2e298edb4a64"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:06:21.712127+00:00",
+          "start_time": "2023-07-18T20:06:21.510473+00:00"
+        }
+      },
       "execution_count": null,
-      "id": "d183d8eb",
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": "unclean_data = pd.read_csv('Uncleaned_DS_jobs.csv')\nunclean_df = pd.DataFrame(unclean_data)\nunclean_df.head()\nunclean_df.info()",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -114,7 +123,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "8140bd3c-0ff4-482a-918f-619e002effc1"
+      "last_transaction_id": "f55fa5f4-3625-435b-a62d-f87f48c96530"
     }
   },
   "nbformat": 4,
