Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -101,6 +101,22 @@
       "execution_count": null,
       "source": "unclean_data = pd.read_csv('Uncleaned_DS_jobs.csv')\nunclean_df = pd.DataFrame(unclean_data)\nunclean_df.head()\nunclean_df.info()",
       "outputs": []
+    },
+    {
+      "id": "140f4ce3-4be3-4032-b7ff-0e1d8055c1d5",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -123,7 +139,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "f55fa5f4-3625-435b-a62d-f87f48c96530"
+      "last_transaction_id": "914a89c3-c6f6-4c2a-ba31-5cbc0335743e"
     }
   },
   "nbformat": 4,
