Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -103,7 +103,97 @@
       "outputs": []
     },
     {
+      "id": "ed967d8b-336e-4e76-be0d-ffdda218a303",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
+    },
+    {
       "id": "140f4ce3-4be3-4032-b7ff-0e1d8055c1d5",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "a60fd088-d29f-4c22-a1fb-cb1897d040c5"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:09:20.756708+00:00",
+          "start_time": "2023-07-18T20:09:20.548823+00:00"
+        },
+        "datalink": {
+          "d42ff857-38ea-4219-a869-354699010ccb": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "d42ff857-38ea-4219-a869-354699010ccb",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:09:20.598831",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_30ee0ad1c26340708269ca048dcd9d73"
+          }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": true,
+          "simpleTableExpanded": false,
+          "updated": 1689710964922,
+          "views": []
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df.isnull().sum()",
+      "outputs": []
+    },
+    {
+      "id": "2929fa3b-5cfb-463e-b640-c65db2f87fc9",
       "cell_type": "code",
       "metadata": {
         "jupyter": {
@@ -139,7 +229,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "914a89c3-c6f6-4c2a-ba31-5cbc0335743e"
+      "last_transaction_id": "b678da20-1920-4293-a0af-d513016631ee"
     }
   },
   "nbformat": 4,
