--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -112,11 +112,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "a60fd088-d29f-4c22-a1fb-cb1897d040c5"
+          "output_collection_id": "4b257693-2b52-42a3-88c4-91f8e813438a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:09:20.756708+00:00",
-          "start_time": "2023-07-18T20:09:20.548823+00:00"
+          "end_time": "2023-07-18T20:10:31.843974+00:00",
+          "start_time": "2023-07-18T20:10:31.652221+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -162,6 +162,50 @@
             "sampling_time": "2023-07-18T20:09:20.598831",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_30ee0ad1c26340708269ca048dcd9d73"
+          },
+          "eab1ecde-d3e6-4ab1-a022-b535befeda68": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "eab1ecde-d3e6-4ab1-a022-b535befeda68",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:10:31.688091",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_5e4df0fa950944289fd59cbc2ccdaee9"
           }
         },
         "dx": {
@@ -173,18 +217,24 @@
         }
       },
       "execution_count": null,
-      "source": "unclean_df.isnull().sum()",
+      "source": "# check for null values\nunclean_df.isnull().sum()",
       "outputs": []
     },
     {
-      "id": "2929fa3b-5cfb-463e-b640-c65db2f87fc9",
-      "cell_type": "markdown",
-      "source": "",
+      "id": "25964581-303f-4046-9287-c2cd8fa17f46",
+      "cell_type": "code",
       "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
         "noteable": {
-          "cell_type": "markdown"
+          "cell_type": "code"
         }
-      }
+      },
+      "execution_count": null,
+      "source": "",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -207,7 +257,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "a63532f1-1e47-47bb-9882-98393934dc2c"
+      "last_transaction_id": "9d254103-0de7-4ce3-9fec-a13cd2f502a7"
     }
   },
   "nbformat": 4,
