Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -221,19 +221,20 @@
       "outputs": []
     },
     {
-      "id": "25964581-303f-4046-9287-c2cd8fa17f46",
+      "id": "85f4f8e6-04b7-43ad-a631-ffcb4b16f9e4",
       "cell_type": "code",
       "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "d4caf346-73d3-4432-a69c-708c2b85b83e"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:11:39.532850+00:00",
+          "start_time": "2023-07-18T20:11:39.353524+00:00"
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "# Identify duplicate rows\nduplicates = unclean_df.duplicated()\nprint(f'Number of duplicate rows = {duplicates.sum()}')\n\n# Drop duplicates\nunclean_df = unclean_df.drop_duplicates()\nunclean_df.reset_index(drop=True, inplace=True)\n\n# Check the shape of the dataframe after dropping duplicates\nunclean_df.shape",
       "outputs": []
     }
   ],
@@ -257,7 +258,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "9d254103-0de7-4ce3-9fec-a13cd2f502a7"
+      "last_transaction_id": "146440f6-4bd0-4bf9-9c3b-56cb0d9e6b12"
     }
   },
   "nbformat": 4,
