Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -221,6 +221,22 @@
       "outputs": []
     },
     {
+      "id": "e31bf01a-4538-4761-a6a8-5029562cf2ff",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "uncleaned_data.drop('index',axis=1,inplace=True)\nuncleaned_data.shape",
+      "outputs": []
+    },
+    {
       "id": "85f4f8e6-04b7-43ad-a631-ffcb4b16f9e4",
       "cell_type": "code",
       "metadata": {
@@ -235,6 +251,22 @@
       },
       "execution_count": null,
       "source": "# Identify duplicate rows\nduplicates = unclean_df.duplicated()\nprint(f'Number of duplicate rows = {duplicates.sum()}')\n\n# Drop duplicates\nunclean_df = unclean_df.drop_duplicates()\nunclean_df.reset_index(drop=True, inplace=True)\n\n# Check the shape of the dataframe after dropping duplicates\nunclean_df.shape",
+      "outputs": []
+    },
+    {
+      "id": "f9be7ed4-0a3d-4264-85c2-9bf90074113a",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
       "outputs": []
     }
   ],
@@ -258,7 +290,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "146440f6-4bd0-4bf9-9c3b-56cb0d9e6b12"
+      "last_transaction_id": "556f946f-7e8c-4e23-a04d-b18f1c89fa63"
     }
   },
   "nbformat": 4,
