Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -229,11 +229,16 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "0f5284be-7eaf-41ea-b192-65e2156f0664"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:13:48.299394+00:00",
+          "start_time": "2023-07-18T20:13:48.137737+00:00"
         }
       },
       "execution_count": null,
-      "source": "uncleaned_data.drop('index',axis=1,inplace=True)\nuncleaned_data.shape",
+      "source": "unclean_df.drop('index',axis=1,inplace=True)\nunclean_df.shape",
       "outputs": []
     },
     {
@@ -242,11 +247,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "d4caf346-73d3-4432-a69c-708c2b85b83e"
+          "output_collection_id": "7bb3e3b5-8483-4cfc-9fba-fb42eb10c9d3"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:11:39.532850+00:00",
-          "start_time": "2023-07-18T20:11:39.353524+00:00"
+          "end_time": "2023-07-18T20:14:04.433934+00:00",
+          "start_time": "2023-07-18T20:14:04.256664+00:00"
         }
       },
       "execution_count": null,
@@ -290,7 +295,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "556f946f-7e8c-4e23-a04d-b18f1c89fa63"
+      "last_transaction_id": "c21debcc-8831-487e-9a68-9e2ef95bf004"
     }
   },
   "nbformat": 4,
