--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -267,11 +267,62 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "ca551c47-9e6c-4fda-af2f-b210e262deaa"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:14:55.851785+00:00",
+          "start_time": "2023-07-18T20:14:55.594578+00:00"
+        },
+        "datalink": {
+          "33e7d758-a095-4990-af7e-ceaa148b473b": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 0,
+              "orig_size_bytes": 0,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 0,
+              "truncated_size_bytes": 0,
+              "truncated_string_columns": []
+            },
+            "display_id": "33e7d758-a095-4990-af7e-ceaa148b473b",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:14:55.693013",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f6384c0fd65d4aeaba5f5c34a305a42c"
+          }
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "print(unclean_df[unclean_df.duplicated()].shape)\n\nunclean_df[unclean_df.duplicated()]",
       "outputs": []
     }
   ],
@@ -295,7 +346,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "c21debcc-8831-487e-9a68-9e2ef95bf004"
+      "last_transaction_id": "38e5c3ca-db56-4c94-8c72-1bcc6986fe9c"
     }
   },
   "nbformat": 4,
