Commit from Noteable
Synced changes with remote storage (initialize kernel)

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "8068b047-1397-4b07-af1f-161a727455b7"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T19:58:34.397160+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "0fc4c340-3e2c-4d5b-9138-8f987a40b882"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T19:59:57.640869+00:00",
@@ -91,7 +91,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4e7a9b48-f33a-4c26-bd0b-2e298edb4a64"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:06:21.712127+00:00",
@@ -112,7 +112,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4b257693-2b52-42a3-88c4-91f8e813438a"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:10:31.843974+00:00",
@@ -230,11 +230,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "0f5284be-7eaf-41ea-b192-65e2156f0664"
+          "output_collection_id": "3e851796-ac22-4a93-bb37-cd8aa702b783"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:13:48.299394+00:00",
-          "start_time": "2023-07-18T20:13:48.137737+00:00"
+          "end_time": "2023-07-18T20:15:19.125636+00:00",
+          "start_time": "2023-07-18T20:15:17.165387+00:00"
         }
       },
       "execution_count": null,
@@ -247,82 +247,15 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7bb3e3b5-8483-4cfc-9fba-fb42eb10c9d3"
+          "output_collection_id": "33f77d1b-1853-4a57-ab23-c30d08398330"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:14:04.433934+00:00",
-          "start_time": "2023-07-18T20:14:04.256664+00:00"
+          "end_time": "2023-07-18T20:15:10.897418+00:00",
+          "start_time": "2023-07-18T20:15:10.721912+00:00"
         }
       },
       "execution_count": null,
       "source": "# Identify duplicate rows\nduplicates = unclean_df.duplicated()\nprint(f'Number of duplicate rows = {duplicates.sum()}')\n\n# Drop duplicates\nunclean_df = unclean_df.drop_duplicates()\nunclean_df.reset_index(drop=True, inplace=True)\n\n# Check the shape of the dataframe after dropping duplicates\nunclean_df.shape",
-      "outputs": []
-    },
-    {
-      "id": "f9be7ed4-0a3d-4264-85c2-9bf90074113a",
-      "cell_type": "code",
-      "metadata": {
-        "jupyter": {
-          "outputs_hidden": false,
-          "source_hidden": false
-        },
-        "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "ca551c47-9e6c-4fda-af2f-b210e262deaa"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-07-18T20:14:55.851785+00:00",
-          "start_time": "2023-07-18T20:14:55.594578+00:00"
-        },
-        "datalink": {
-          "33e7d758-a095-4990-af7e-ceaa148b473b": {
-            "applied_filters": [],
-            "dataframe_info": {
-              "default_index_used": true,
-              "orig_num_cols": 14,
-              "orig_num_rows": 0,
-              "orig_size_bytes": 0,
-              "truncated_num_cols": 14,
-              "truncated_num_rows": 0,
-              "truncated_size_bytes": 0,
-              "truncated_string_columns": []
-            },
-            "display_id": "33e7d758-a095-4990-af7e-ceaa148b473b",
-            "dx_settings": {
-              "ALLOW_NOTEABLE_ATTRS": true,
-              "COLUMN_SAMPLING_METHOD": "outer",
-              "DB_LOCATION": ":memory:",
-              "DEV_MODE": false,
-              "DISPLAY_MAX_COLUMNS": 100,
-              "DISPLAY_MAX_ROWS": 50000,
-              "DISPLAY_MODE": "simple",
-              "ENABLE_ASSIGNMENT": true,
-              "ENABLE_DATALINK": true,
-              "FLATTEN_COLUMN_VALUES": true,
-              "FLATTEN_INDEX_VALUES": false,
-              "GENERATE_DEX_METADATA": false,
-              "HTML_TABLE_SCHEMA": false,
-              "LOG_LEVEL": 30,
-              "MAX_RENDER_SIZE_BYTES": 104857600,
-              "MAX_STRING_LENGTH": 250,
-              "NUM_PAST_SAMPLES_TRACKED": 3,
-              "RANDOM_STATE": 12648430,
-              "RESET_INDEX_VALUES": false,
-              "ROW_SAMPLING_METHOD": "random",
-              "SAMPLING_FACTOR": 0.1,
-              "SAMPLING_METHOD": "random",
-              "STRINGIFY_COLUMN_VALUES": true,
-              "STRINGIFY_INDEX_VALUES": false
-            },
-            "sample_history": [],
-            "sampling_time": "2023-07-18T20:14:55.693013",
-            "user_variable_name": null,
-            "variable_name": "unk_dataframe_f6384c0fd65d4aeaba5f5c34a305a42c"
-          }
-        }
-      },
-      "execution_count": null,
-      "source": "print(unclean_df[unclean_df.duplicated()].shape)\n\nunclean_df[unclean_df.duplicated()]",
       "outputs": []
     }
   ],
@@ -346,7 +279,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "38e5c3ca-db56-4c94-8c72-1bcc6986fe9c"
+      "last_transaction_id": "65e0d3ae-2593-4734-a2c0-2039e983f2f3"
     }
   },
   "nbformat": 4,
