--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "434b5d44-edb9-4338-80c4-1e9916a46733"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T19:58:34.397160+00:00",
-          "start_time": "2023-07-18T19:58:34.239186+00:00"
+          "end_time": "2023-07-18T20:16:05.786691+00:00",
+          "start_time": "2023-07-18T20:16:05.630316+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "601bfdf4-18f8-40f0-923c-c65e77c5367f"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T19:59:57.640869+00:00",
-          "start_time": "2023-07-18T19:59:57.343317+00:00"
+          "end_time": "2023-07-18T20:16:10.230698+00:00",
+          "start_time": "2023-07-18T20:16:09.949338+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -79,6 +79,52 @@
             "sampling_time": "2023-07-18T19:59:57.480819",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_5d9268d77adb4b5bab1ebc013a6b109a"
+          },
+          "b5373171-f6bb-4882-87de-6e1f78642a19": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "b5373171-f6bb-4882-87de-6e1f78642a19",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:16:10.071578",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_dc0e22f510534b61ba646099883ff65a"
           }
         }
       },
@@ -91,11 +137,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "7bc68531-fce7-47e1-abb9-675f1fa53de8"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:06:21.712127+00:00",
-          "start_time": "2023-07-18T20:06:21.510473+00:00"
+          "end_time": "2023-07-18T20:16:14.206031+00:00",
+          "start_time": "2023-07-18T20:16:14.002683+00:00"
         }
       },
       "execution_count": null,
@@ -279,7 +325,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "65e0d3ae-2593-4734-a2c0-2039e983f2f3"
+      "last_transaction_id": "54e41b84-a18c-4d47-920d-f727e5a7478f"
     }
   },
   "nbformat": 4,
