Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -158,11 +158,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "6f707742-d6f6-4535-9c05-b7b88975ed85"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:10:31.843974+00:00",
-          "start_time": "2023-07-18T20:10:31.652221+00:00"
+          "end_time": "2023-07-18T20:16:25.019513+00:00",
+          "start_time": "2023-07-18T20:16:24.826173+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -252,6 +252,50 @@
             "sampling_time": "2023-07-18T20:10:31.688091",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_5e4df0fa950944289fd59cbc2ccdaee9"
+          },
+          "f8760eff-3e2d-44c5-96fa-33f19fc5726c": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "f8760eff-3e2d-44c5-96fa-33f19fc5726c",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:16:24.862516",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_b7b5911b8e754c4a95473182efd5b4d7"
           }
         },
         "dx": {
@@ -276,11 +320,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "3e851796-ac22-4a93-bb37-cd8aa702b783"
+          "output_collection_id": "eb790662-f550-45b0-bd37-d87b6177b538"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:15:19.125636+00:00",
-          "start_time": "2023-07-18T20:15:17.165387+00:00"
+          "end_time": "2023-07-18T20:16:28.935946+00:00",
+          "start_time": "2023-07-18T20:16:28.774058+00:00"
         }
       },
       "execution_count": null,
@@ -293,15 +337,31 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "33f77d1b-1853-4a57-ab23-c30d08398330"
+          "output_collection_id": "4f17e068-189a-4295-8fc2-09e1938b7529"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:15:10.897418+00:00",
-          "start_time": "2023-07-18T20:15:10.721912+00:00"
+          "end_time": "2023-07-18T20:16:33.909085+00:00",
+          "start_time": "2023-07-18T20:16:33.730705+00:00"
         }
       },
       "execution_count": null,
       "source": "# Identify duplicate rows\nduplicates = unclean_df.duplicated()\nprint(f'Number of duplicate rows = {duplicates.sum()}')\n\n# Drop duplicates\nunclean_df = unclean_df.drop_duplicates()\nunclean_df.reset_index(drop=True, inplace=True)\n\n# Check the shape of the dataframe after dropping duplicates\nunclean_df.shape",
+      "outputs": []
+    },
+    {
+      "id": "66fcb0e5-20bc-43b3-b52e-5e07a282eafe",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
+        }
+      },
+      "execution_count": null,
+      "source": "",
       "outputs": []
     }
   ],
@@ -325,7 +385,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "54e41b84-a18c-4d47-920d-f727e5a7478f"
+      "last_transaction_id": "4ceb77d4-83d0-441c-8525-527654cf4296"
     }
   },
   "nbformat": 4,
