--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "434b5d44-edb9-4338-80c4-1e9916a46733"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:05.786691+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "601bfdf4-18f8-40f0-923c-c65e77c5367f"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:10.230698+00:00",
@@ -137,7 +137,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "7bc68531-fce7-47e1-abb9-675f1fa53de8"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:14.206031+00:00",
@@ -158,7 +158,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6f707742-d6f6-4535-9c05-b7b88975ed85"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:25.019513+00:00",
@@ -320,7 +320,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "eb790662-f550-45b0-bd37-d87b6177b538"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:28.935946+00:00",
@@ -337,7 +337,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "4f17e068-189a-4295-8fc2-09e1938b7529"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:16:33.909085+00:00",
@@ -385,7 +385,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "4ceb77d4-83d0-441c-8525-527654cf4296"
+      "last_transaction_id": "371681f4-16ae-4548-becc-cb42c86f2eac"
     }
   },
   "nbformat": 4,
