--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,11 +6,11 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "a3774967-8363-40a4-81e6-16bf9aff00be"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:05.786691+00:00",
-          "start_time": "2023-07-18T20:16:05.630316+00:00"
+          "end_time": "2023-07-18T20:17:46.654103+00:00",
+          "start_time": "2023-07-18T20:17:46.497993+00:00"
         }
       },
       "outputs": [],
@@ -27,11 +27,11 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": null
+          "output_collection_id": "c00d91b2-558b-443f-869e-ca4633e445fb"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:10.230698+00:00",
-          "start_time": "2023-07-18T20:16:09.949338+00:00"
+          "end_time": "2023-07-18T20:17:51.421465+00:00",
+          "start_time": "2023-07-18T20:17:51.113049+00:00"
         },
         "datalink": {
           "16f69847-5e7c-47d5-8fbc-e423d5206889": {
@@ -125,6 +125,52 @@
             "sampling_time": "2023-07-18T20:16:10.071578",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_dc0e22f510534b61ba646099883ff65a"
+          },
+          "fd643d69-5d99-4e67-96f0-b962fa4cdb25": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 15,
+              "orig_num_rows": 5,
+              "orig_size_bytes": 640,
+              "truncated_num_cols": 15,
+              "truncated_num_rows": 5,
+              "truncated_size_bytes": 640,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "fd643d69-5d99-4e67-96f0-b962fa4cdb25",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:17:51.259585",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f1057371e1d64c2c954127619176ebc3"
           }
         }
       },
@@ -345,7 +391,7 @@
         }
       },
       "execution_count": null,
-      "source": "# Identify duplicate rows\nduplicates = unclean_df.duplicated()\nprint(f'Number of duplicate rows = {duplicates.sum()}')\n\n# Drop duplicates\nunclean_df = unclean_df.drop_duplicates()\nunclean_df.reset_index(drop=True, inplace=True)\n\n# Check the shape of the dataframe after dropping duplicates\nunclean_df.shape",
+      "source": "print(uncleaned_data[uncleaned_data.duplicated()].shape)\n\nuncleaned_data[uncleaned_data.duplicated()]",
       "outputs": []
     },
     {
@@ -385,7 +431,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "371681f4-16ae-4548-becc-cb42c86f2eac"
+      "last_transaction_id": "588dded3-2329-4790-be6a-542f29230305"
     }
   },
   "nbformat": 4,
