--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -172,7 +172,14 @@
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f1057371e1d64c2c954127619176ebc3"
           }
-        }
+        },
+        "dx": {
+          "fieldMetadata": {},
+          "simpleTable": false,
+          "updated": 1689711482932,
+          "views": []
+        },
+        "scrolled": false
       },
       "outputs": [],
       "source": "unclean_data = pd.read_csv('Uncleaned_DS_jobs.csv')\nunclean_df = pd.DataFrame(unclean_data)\nunclean_df.head()"
@@ -183,11 +190,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "65f906b0-e932-4e54-a6ea-f60075352fa5"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:14.206031+00:00",
-          "start_time": "2023-07-18T20:16:14.002683+00:00"
+          "end_time": "2023-07-18T20:18:08.076857+00:00",
+          "start_time": "2023-07-18T20:18:07.872888+00:00"
         }
       },
       "execution_count": null,
@@ -204,11 +211,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "735216ee-8eba-48e0-b012-5e4ac67e53b7"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:25.019513+00:00",
-          "start_time": "2023-07-18T20:16:24.826173+00:00"
+          "end_time": "2023-07-18T20:18:11.745110+00:00",
+          "start_time": "2023-07-18T20:18:11.554551+00:00"
         },
         "datalink": {
           "d42ff857-38ea-4219-a869-354699010ccb": {
@@ -342,6 +349,50 @@
             "sampling_time": "2023-07-18T20:16:24.862516",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_b7b5911b8e754c4a95473182efd5b4d7"
+          },
+          "6402e673-ccbe-44d1-bd45-a6de8b2aa7d8": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": false,
+              "orig_num_cols": 1,
+              "orig_num_rows": 15,
+              "orig_size_bytes": 240,
+              "truncated_num_cols": 1,
+              "truncated_num_rows": 15,
+              "truncated_size_bytes": 240,
+              "truncated_string_columns": []
+            },
+            "display_id": "6402e673-ccbe-44d1-bd45-a6de8b2aa7d8",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:18:11.588395",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_b06f914d9c504d9485d965d7884806dd"
           }
         },
         "dx": {
@@ -366,11 +417,11 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "b76f2f56-e0ed-47eb-9dba-843060058ad1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:28.935946+00:00",
-          "start_time": "2023-07-18T20:16:28.774058+00:00"
+          "end_time": "2023-07-18T20:18:15.509492+00:00",
+          "start_time": "2023-07-18T20:18:15.346726+00:00"
         }
       },
       "execution_count": null,
@@ -383,11 +434,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": null
+          "output_collection_id": "6f5bb144-4b71-4f61-85a5-9bae0610a5fd"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:16:33.909085+00:00",
-          "start_time": "2023-07-18T20:16:33.730705+00:00"
+          "end_time": "2023-07-18T20:18:18.986805+00:00",
+          "start_time": "2023-07-18T20:18:18.427071+00:00"
         }
       },
       "execution_count": null,
@@ -431,7 +482,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "588dded3-2329-4790-be6a-542f29230305"
+      "last_transaction_id": "6ce430da-04f6-441d-9765-93142efeb866"
     }
   },
   "nbformat": 4,
