--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -434,15 +434,63 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "6f5bb144-4b71-4f61-85a5-9bae0610a5fd"
+          "output_collection_id": "ab4c59a3-fa2f-4585-b2c5-d136d1d68961"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:18:18.986805+00:00",
-          "start_time": "2023-07-18T20:18:18.427071+00:00"
+          "end_time": "2023-07-18T20:18:31.560312+00:00",
+          "start_time": "2023-07-18T20:18:31.290687+00:00"
+        },
+        "datalink": {
+          "ee42736d-9639-42ca-8138-80ed5129674c": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "ee42736d-9639-42ca-8138-80ed5129674c",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:18:31.400034",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_f3f573f863d440d08f9b1704a8cb0c4c"
+          }
         }
       },
       "execution_count": null,
-      "source": "print(uncleaned_data[uncleaned_data.duplicated()].shape)\n\nuncleaned_data[uncleaned_data.duplicated()]",
+      "source": "print(unclean_df[unclean_df.duplicated()].shape)\n\nunclean_df[unclean_df.duplicated()]",
       "outputs": []
     },
     {
@@ -482,7 +530,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "6ce430da-04f6-441d-9765-93142efeb866"
+      "last_transaction_id": "53309c53-9333-4cf9-8282-48d8c7a2bfbf"
     }
   },
   "nbformat": 4,
