Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -434,11 +434,11 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "ab4c59a3-fa2f-4585-b2c5-d136d1d68961"
+          "output_collection_id": "e0de311a-8b4f-41e1-a6b7-dfa17373c65a"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:18:31.560312+00:00",
-          "start_time": "2023-07-18T20:18:31.290687+00:00"
+          "end_time": "2023-07-18T20:19:13.222639+00:00",
+          "start_time": "2023-07-18T20:19:12.944627+00:00"
         },
         "datalink": {
           "ee42736d-9639-42ca-8138-80ed5129674c": {
@@ -486,6 +486,52 @@
             "sampling_time": "2023-07-18T20:18:31.400034",
             "user_variable_name": null,
             "variable_name": "unk_dataframe_f3f573f863d440d08f9b1704a8cb0c4c"
+          },
+          "aedd6026-3de4-4e59-83ea-8b12e6339f5d": {
+            "applied_filters": [],
+            "dataframe_info": {
+              "default_index_used": true,
+              "orig_num_cols": 14,
+              "orig_num_rows": 13,
+              "orig_size_bytes": 1560,
+              "truncated_num_cols": 14,
+              "truncated_num_rows": 13,
+              "truncated_size_bytes": 1560,
+              "truncated_string_columns": [
+                "Job Description"
+              ]
+            },
+            "display_id": "aedd6026-3de4-4e59-83ea-8b12e6339f5d",
+            "dx_settings": {
+              "ALLOW_NOTEABLE_ATTRS": true,
+              "COLUMN_SAMPLING_METHOD": "outer",
+              "DB_LOCATION": ":memory:",
+              "DEV_MODE": false,
+              "DISPLAY_MAX_COLUMNS": 100,
+              "DISPLAY_MAX_ROWS": 50000,
+              "DISPLAY_MODE": "simple",
+              "ENABLE_ASSIGNMENT": true,
+              "ENABLE_DATALINK": true,
+              "FLATTEN_COLUMN_VALUES": true,
+              "FLATTEN_INDEX_VALUES": false,
+              "GENERATE_DEX_METADATA": false,
+              "HTML_TABLE_SCHEMA": false,
+              "LOG_LEVEL": 30,
+              "MAX_RENDER_SIZE_BYTES": 104857600,
+              "MAX_STRING_LENGTH": 250,
+              "NUM_PAST_SAMPLES_TRACKED": 3,
+              "RANDOM_STATE": 12648430,
+              "RESET_INDEX_VALUES": false,
+              "ROW_SAMPLING_METHOD": "random",
+              "SAMPLING_FACTOR": 0.1,
+              "SAMPLING_METHOD": "random",
+              "STRINGIFY_COLUMN_VALUES": true,
+              "STRINGIFY_INDEX_VALUES": false
+            },
+            "sample_history": [],
+            "sampling_time": "2023-07-18T20:19:13.058155",
+            "user_variable_name": null,
+            "variable_name": "unk_dataframe_74bc472025094a04b18ca5229126b016"
           }
         }
       },
@@ -530,7 +576,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "53309c53-9333-4cf9-8282-48d8c7a2bfbf"
+      "last_transaction_id": "f1b76123-a23e-40fe-86aa-28287da97d6d"
     }
   },
   "nbformat": 4,
