Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -548,11 +548,37 @@
           "source_hidden": false
         },
         "noteable": {
-          "cell_type": "code"
+          "cell_type": "code",
+          "output_collection_id": "5b14dde3-7b93-4da8-bc75-a76166560bff"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:41:38.480087+00:00",
+          "start_time": "2023-07-18T20:41:38.315206+00:00"
         }
       },
       "execution_count": null,
-      "source": "",
+      "source": "unclean_df.drop_duplicates(inplace=True)",
+      "outputs": []
+    },
+    {
+      "id": "14964866-be51-46a1-82b6-51a867dd41a1",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "cdb6503a-c91c-441b-bf79-e5a5a38d24c1"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:41:54.184003+00:00",
+          "start_time": "2023-07-18T20:41:54.007981+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "uncleaned_data.shape",
       "outputs": []
     }
   ],
@@ -576,7 +602,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "f1b76123-a23e-40fe-86aa-28287da97d6d"
+      "last_transaction_id": "b29a4e52-4a09-48e5-9872-245888c6be81"
     }
   },
   "nbformat": 4,
