Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -570,15 +570,36 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "cdb6503a-c91c-441b-bf79-e5a5a38d24c1"
+          "output_collection_id": "8ecce59f-7d5a-4da5-9836-02098673bdd1"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-18T20:41:54.184003+00:00",
-          "start_time": "2023-07-18T20:41:54.007981+00:00"
+          "end_time": "2023-07-18T20:41:59.646168+00:00",
+          "start_time": "2023-07-18T20:41:59.487295+00:00"
         }
       },
       "execution_count": null,
-      "source": "uncleaned_data.shape",
+      "source": "unclean_df.shape",
+      "outputs": []
+    },
+    {
+      "id": "87357b88-46e0-482f-b689-31211fb3070a",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "78ff2977-d863-49e3-b8d3-9a9a8136f6ce"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T20:42:16.111847+00:00",
+          "start_time": "2023-07-18T20:42:15.951732+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df.reset_index(inplace=True)\nunclean_df.shape",
       "outputs": []
     }
   ],
@@ -602,7 +623,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "b29a4e52-4a09-48e5-9872-245888c6be81"
+      "last_transaction_id": "69db2cad-ae74-4287-a105-bbc9c6ccf773"
     }
   },
   "nbformat": 4,
