Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -670,6 +670,26 @@
       "execution_count": null,
       "source": "unclean_df",
       "outputs": []
+    },
+    {
+      "id": "3e82cb24-cde5-4d04-9b6c-b9b59ccd68a2",
+      "cell_type": "markdown",
+      "source": "Removing Number in Company Name columns",
+      "metadata": {
+        "noteable": {
+          "cell_type": "markdown"
+        }
+      }
+    },
+    {
+      "id": "47ee248c-14ba-482c-a1bf-432f2a70dc72",
+      "cell_type": "markdown",
+      "source": "",
+      "metadata": {
+        "noteable": {
+          "cell_type": "markdown"
+        }
+      }
     }
   ],
   "metadata": {
@@ -692,7 +712,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "7fad2a89-95f1-456f-92c7-6630ddda7f27"
+      "last_transaction_id": "0a1c018b-36d4-498e-9f46-afe62d5b9157"
     }
   },
   "nbformat": 4,
