Commit from Noteable
Synced changes with remote storage (initialize kernel)

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -6,7 +6,7 @@
       "id": "bdc02879",
       "metadata": {
         "noteable": {
-          "output_collection_id": "a3774967-8363-40a4-81e6-16bf9aff00be"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:17:46.654103+00:00",
@@ -27,7 +27,7 @@
       "id": "25843b51",
       "metadata": {
         "noteable": {
-          "output_collection_id": "c00d91b2-558b-443f-869e-ca4633e445fb"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:17:51.421465+00:00",
@@ -190,7 +190,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "65f906b0-e932-4e54-a6ea-f60075352fa5"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:18:08.076857+00:00",
@@ -211,7 +211,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "735216ee-8eba-48e0-b012-5e4ac67e53b7"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:18:11.745110+00:00",
@@ -417,7 +417,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "b76f2f56-e0ed-47eb-9dba-843060058ad1"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:18:15.509492+00:00",
@@ -434,7 +434,7 @@
       "metadata": {
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "e0de311a-8b4f-41e1-a6b7-dfa17373c65a"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:19:13.222639+00:00",
@@ -549,7 +549,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "5b14dde3-7b93-4da8-bc75-a76166560bff"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:41:38.480087+00:00",
@@ -570,7 +570,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "8ecce59f-7d5a-4da5-9836-02098673bdd1"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:41:59.646168+00:00",
@@ -591,7 +591,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "78ff2977-d863-49e3-b8d3-9a9a8136f6ce"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:42:16.111847+00:00",
@@ -612,7 +612,7 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "14d249f3-96dc-4cd8-979b-22fa33c2b9f9"
+          "output_collection_id": null
         },
         "ExecuteTime": {
           "end_time": "2023-07-18T20:42:32.447062+00:00",
@@ -682,85 +682,15 @@
       }
     },
     {
-      "id": "973491de-01fa-4926-a8ec-d14d5c56e61f",
+      "id": "9264c6de-7379-4db0-9c95-71d16b3da3e1",
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "code",
-          "output_collection_id": "88862f86-0a9f-49ae-b29f-b78b61f100e6"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-07-18T20:47:01.071388+00:00",
-          "start_time": "2023-07-18T20:47:00.913272+00:00"
+          "cell_type": "python"
         }
       },
       "execution_count": null,
-      "source": "# Remove numbers from 'Company Name' column\nunclean_df['Company Name'] = unclean_df['Company Name'].str.replace('\\d+', '')",
-      "outputs": []
-    },
-    {
-      "id": "318c8ad5-423d-4cbd-bf2c-e56aef7c3c29",
-      "cell_type": "code",
-      "metadata": {
-        "noteable": {
-          "cell_type": "python",
-          "output_collection_id": "5ed21b47-14a5-4b5c-8222-816cd2e556ee"
-        },
-        "ExecuteTime": {
-          "end_time": "2023-07-18T20:47:08.942188+00:00",
-          "start_time": "2023-07-18T20:47:08.614136+00:00"
-        },
-        "datalink": {
-          "32cb6683-81d0-41f8-85b4-8711506ea681": {
-            "applied_filters": [],
-            "dataframe_info": {
-              "default_index_used": true,
-              "orig_num_cols": 15,
-              "orig_num_rows": 659,
-              "orig_size_bytes": 84352,
-              "truncated_num_cols": 15,
-              "truncated_num_rows": 659,
-              "truncated_size_bytes": 84352,
-              "truncated_string_columns": [
-                "Job Description"
-              ]
-            },
-            "display_id": "32cb6683-81d0-41f8-85b4-8711506ea681",
-            "dx_settings": {
-              "ALLOW_NOTEABLE_ATTRS": true,
-              "COLUMN_SAMPLING_METHOD": "outer",
-              "DB_LOCATION": ":memory:",
-              "DEV_MODE": false,
-              "DISPLAY_MAX_COLUMNS": 100,
-              "DISPLAY_MAX_ROWS": 50000,
-              "DISPLAY_MODE": "simple",
-              "ENABLE_ASSIGNMENT": true,
-              "ENABLE_DATALINK": true,
-              "FLATTEN_COLUMN_VALUES": true,
-              "FLATTEN_INDEX_VALUES": false,
-              "GENERATE_DEX_METADATA": false,
-              "HTML_TABLE_SCHEMA": false,
-              "LOG_LEVEL": 30,
-              "MAX_RENDER_SIZE_BYTES": 104857600,
-              "MAX_STRING_LENGTH": 250,
-              "NUM_PAST_SAMPLES_TRACKED": 3,
-              "RANDOM_STATE": 12648430,
-              "RESET_INDEX_VALUES": false,
-              "ROW_SAMPLING_METHOD": "random",
-              "SAMPLING_FACTOR": 0.1,
-              "SAMPLING_METHOD": "random",
-              "STRINGIFY_COLUMN_VALUES": true,
-              "STRINGIFY_INDEX_VALUES": false
-            },
-            "sample_history": [],
-            "sampling_time": "2023-07-18T20:47:08.750586",
-            "user_variable_name": "unclean_df",
-            "variable_name": "unclean_df"
-          }
-        }
-      },
-      "execution_count": null,
-      "source": "unclean_df",
+      "source": "",
       "outputs": []
     }
   ],
@@ -784,7 +714,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "6c068308-063f-4c8a-9e03-7221e4d6047d"
+      "last_transaction_id": "699e35c6-f4e4-4365-8c66-ec7d82b60efd"
     }
   },
   "nbformat": 4,
