Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -952,6 +952,23 @@
       "execution_count": null,
       "source": "unclean_df['Salary Estimate'].value_counts()",
       "outputs": []
+    },
+    {
+      "id": "d54aa14c-4aa7-4195-b585-da9f93badc2b",
+      "cell_type": "code",
+      "metadata": {
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "0c0c5dee-e269-4515-98a6-bf815b014445"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:15:39.553930+00:00",
+          "start_time": "2023-07-18T21:15:38.792652+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df['min_salary'] = 0\nunclean_df['max_salary'] = 0\nunclean_df['avg_salary'] = 0\nfor i in range(len(unclean_df)):\n    try:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split(' ')[0].split('-')[1].replace('$', '').replace('K', ''))\n    except:\n        unclean_df.loc[i, 'min_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[0].replace('$', '').replace('K', ''))\n        unclean_df.loc[i, 'max_salary'] = int(unclean_df['Salary Estimate'][i].split('(E')[0].split('-')[1].replace('$', '').replace('K', ''))\n    finally:\n        unclean_df.loc[i, 'Salary Estimate'] = str(unclean_df.loc[i, 'min_salary']) + '-' + str(unclean_df.loc[i, 'max_salary'])\n        unclean_df.loc[i, 'avg_salary'] = np.mean([unclean_df.loc[i, 'min_salary'], unclean_df.loc[i, 'max_salary']])",
+      "outputs": []
     }
   ],
   "metadata": {
@@ -974,7 +991,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "ee4fc5d3-ef60-4d3c-be6a-8b6db0c04f65"
+      "last_transaction_id": "fda61929-3f95-418f-a867-f5f9cc4ae617"
     }
   },
   "nbformat": 4,
