Commit from Noteable
Updating project file cache

--- a/Project 1 - Ram.ipynb
+++ b/Project 1 - Ram.ipynb
@@ -1054,7 +1054,28 @@
       "cell_type": "code",
       "metadata": {
         "noteable": {
-          "cell_type": "python"
+          "cell_type": "python",
+          "output_collection_id": "b2e1ce27-7335-43f8-ac8c-bac0782e8811"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-18T21:43:31.733641+00:00",
+          "start_time": "2023-07-18T21:43:31.572272+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "unclean_df['Job Description'][0].split(\"\\n\\n\")",
+      "outputs": []
+    },
+    {
+      "id": "e9fc495d-8dc1-438d-bc57-8a94b4118df3",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code"
         }
       },
       "execution_count": null,
@@ -1082,7 +1103,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "9cb445a8-e4db-48a6-8f6f-64c0ef40e3c8"
+      "last_transaction_id": "4aa0b5cd-3b32-4829-8da1-e4c37da581e7"
     }
   },
   "nbformat": 4,
